# EmaCalculation

./: CMakeLists.txt  Readme.md  log.csv  main.cpp
